--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "mersenne-twister": "^1.1.0",
     "register-service-worker": "^1.7.2",
     "video.js": "^8.0.4",
     "vue": "^3.2.13",
