--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.10.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "firebase": "^9.17.2",
     "mersenne-twister": "^1.1.0",
     "register-service-worker": "^1.7.2",
     "video.js": "^8.0.4",
