--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "firebase": "^9.17.2",
     "mersenne-twister": "^1.1.0",
     "register-service-worker": "^1.7.2",
+    "sass": "1.26.5",
+    "sass-loader": "^13.2.1",
     "video.js": "^8.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
