--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "video.js": "^8.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.2.14",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
